--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									need a subtitle.
 								-->
 								<h2><a href="#">Changing Economy</a></h2>
-								<p>A free, fully responsive HTML5 site template by HTML5 UP</p>
+								<p>Different effects the economy has certain aspects of life and the environment</p>
 							</header>
 							<div class="info">
 								<!--
