--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									need a subtitle.
 								-->
 								<h2><a href="#">Changing Economy</a></h2>
-								<p>Different effects the economy has on certain aspects of life and the environment</p>
+								<p>Different effects the economy has certain aspects of life and the environment</p>
 							</header>
 							<div class="info">
 								<!--
@@ -39,13 +39,13 @@
 									the entire "date" element.
 
 								-->
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">January<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
+									<li><a href="#" class="icon fa-heart">10000000</a></li>
 									<li><a href="#" class="icon fa-twitter">64</a></li>
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
