--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								-->
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">10000000</a></li>
+									<li><a href="#" class="icon fa-heart">r54</a></li>
 									<li><a href="#" class="icon fa-twitter">64</a></li>
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
