--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									need a subtitle.
 								-->
 								<h2><a href="#">Changing Economy</a></h2>
-								<p>Different effects the economy has certain aspects of life and the environment</p>
+								<p>Different effects to the economy have certain aspects of life and the environment</p>
 							</header>
 							<div class="info">
 								<!--
@@ -45,7 +45,7 @@
 								-->
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">r54</a></li>
+									<li><a href="#" class="icon fa-heart">54</a></li>
 									<li><a href="#" class="icon fa-twitter">64</a></li>
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
