--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									the entire "date" element.
 
 								-->
-								<span class="date"><span class="month">January<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">January<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
@@ -50,8 +50,7 @@
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/		
-changing-economy-300x199.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<p>
 								<strong>Hello!</strong> You're looking at <strong>Striped</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a>
 								for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
@@ -71,7 +70,7 @@ changing-economy-300x199.jpg" alt="" /></a>
 								<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">16</a></li>
 									<li><a href="#" class="icon fa-heart">32</a></li>
