--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<section class="box calendar">
 						<div class="inner">
 							<table>
-								<caption>July 2014</caption>
+								<caption>January 2018</caption>
 								<thead>
 									<tr>
 										<th scope="col" title="Monday">M</th>
@@ -199,7 +199,7 @@
 										<td><span>11</span></td>
 										<td><span>12</span></td>
 										<td><span>13</span></td>
-										<td class="today"><a href="#">14</a></td>
+										<td><span>14</span></td>
 										<td><span>15</span></td>
 										<td><span>16</span></td>
 										<td><span>17</span></td>
@@ -216,7 +216,7 @@
 									<tr>
 										<td><a href="#">25</a></td>
 										<td><span>26</span></td>
-										<td><span>27</span></td>
+										<td> class="today"><a href="#">27</a></td>
 										<td><span>28</span></td>
 										<td class="pad" colspan="3"><span>&nbsp;</span></td>
 									</tr>
