--- a/index.html
+++ b/index.html
@@ -210,14 +210,17 @@
 										<td><span>20</span></td>
 										<td><span>21</span></td>
 										<td><span>22</span></td>
-										<td><a href="#">23</a></td>
+										<td><span>23</span></td>
 										<td><span>24</span></td>
 									</tr>
 									<tr>
-										<td><a href="#">25</a></td>
+										<td><span>25</span></td>
 										<td><span>26</span></td>
 										<td> class="today"><a href="#">27</a></td>
 										<td><span>28</span></td>
+										<td><span>29</span></td>
+										<td><span>30</span></td>
+										<td><span>31</span></td>
 										<td class="pad" colspan="3"><span>&nbsp;</span></td>
 									</tr>
 								</tbody>
