--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<!-- Post -->
 						<article class="box post post-excerpt">
 							<header>
-								<h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
+								<h2><a href="#">Effects of a bad economy </a></h2>
 								<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
 							</header>
 							<div class="info">
