--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<article class="box post post-excerpt">
 							<header>
 								<h2><a href="#">Effects of a Bad Economy </a></h2>
-								<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
+								<p>The effects of a bad economy are recessions result in higher unemployment, lower wages and incomes, and lost opportunities more generally. Education, private capital investments, and economic opportunity are all likely to suffer in the current downturn, and the effects will be long-lived. </p>
 							</header>
 							<div class="info">
 								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
