--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
 							</div>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<p>
-								<strong>Hello!</strong> You're looking at <strong>Striped</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a>
-								for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
-								repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
+								Though it may seem as though donation of clothes to third-world countries are beneficial to the people, it actually ruins the economy. 70% of the clothing donated ends
+								up in Africa, East Africa is also already in proposal try to ban second-hand clothing from entering their countries. These donated clothes causes a disruption in the natural
+								economic cycle, instead of buying clothes from the locals, the people choose to buy clothes from the second-hand sellers. Most of the money not going back to community but 
+								the pockets of the people who pay for the bundle of clothes. This keeps many of the countries in a third world position, this isn't only with clothes but donation of food as well.
 							</p>
 							<p>
-								Striped is released for free under the <a href="http://html5up.net/license">Creative Commons Attribution license</a> so feel free to use it for personal projects
-								or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
-								<a href="http://html5up.net">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/ajlkn">Twitter</a> for new releases and updates.
+							
 							</p>
 						</article>
 
