--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									if they get too long. You can also remove the <p> entirely if you don't
 									need a subtitle.
 								-->
-								<h2><a href="#">Changing Economy</a></h2>
+								<h2><a href="#">Changing The Donation System</a></h2>
 								<p>Different effects to the economy have certain aspects of life and the environment</p>
 							</header>
 							<div class="info">
@@ -50,16 +50,15 @@
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://cdn.static-economist.com/sites/default/files/images/2016/03/articles/main/20160402_map001.jpg" alt="" /></a>
 							<p>
 								Though it may seem as though donation of clothes to third-world countries are beneficial to the people, it actually ruins the economy. 70% of the clothing donated ends
 								up in Africa, East Africa is also already in proposal try to ban second-hand clothing from entering their countries. These donated clothes causes a disruption in the natural
 								economic cycle, instead of buying clothes from the locals, the people choose to buy clothes from the second-hand sellers. Most of the money not going back to community but 
 								the pockets of the people who pay for the bundle of clothes. This keeps many of the countries in a third world position, this isn't only with clothes but donation of food as well.
 							</p>
-							<p>
 							
-							</p>
+							
 						</article>
 
 					<!-- Post -->
