--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 									need a subtitle.
 								-->
 								<h2><a href="#">Changing Economy</a></h2>
-								<p> </p>
+								<p>Effects of donation of clothes to countries, and why it's better to give education.
+								</p>
 							</header>
 							<div class="info">
 								<!--
@@ -50,7 +51,7 @@
 									<li><a href="#" class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://cdn.static-economist.com/sites/default/files/images/2016/03/articles/main/20160402_map001.jpg" alt="" /></a>
 							<p>
 								Though it may seem as though donation of clothes to third-world countries are beneficial to the people, it actually ruins the economy. 70% of the clothing donated ends
 								up in Africa, East Africa is also already in proposal try to ban second-hand clothing from entering their countries. These donated clothes causes a disruption in the natural
