--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
+							<li class="current"><a href="#">Home</a></li>
 							<li><a href="#">About Me</a></li>
 							<li><a href="#">Contact Me</a></li>
 						</ul>
