--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
-							<li><a href="AboutMe.html</a></li>
+							<li><a href="AboutMe.html"About Me</a></li>
 							<li><a href="#">Contact Me</a></li>
 						</ul>
 					</nav>
