--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,5 +1,5 @@
-<html>
+<HTML>
   <HEAD>
-      <TITLE> This is the About Me page </title>
+      <TITLE> This is the About Me page </TITLE>
     </HEAD>
  </HTML>
