--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,5 +1,5 @@
 <HTML>
   <HEAD>
-      <TITLE> This is the About Me page </TITLE>
+      <h1> This is the About Me page </h1>
     </HEAD>
  </HTML>
