--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
 								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">54</a></li>
-									<li><a href="#" class="icon fa-twitter">64</a></li>
-									<li><a href="#" class="icon fa-facebook">128</a></li>
+									<li><a href="https://mail.google.com/mail
+" class="icon fa-comment">16</a></li>
+									<li><a href="https://www.instagram.com/?hl=en
+" class="icon fa-heart">54</a></li>
+									<li><a href="https://twitter.com/
+" class="icon fa-twitter">64</a></li>
+									<li><a href="https://www.facebook.com/
+" class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
 							<a href="#" class="image featured"><img src="https://cdn.static-economist.com/sites/default/files/images/2016/03/articles/main/20160402_map001.jpg" alt="" /></a>
