--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,5 +1,8 @@
 <HTML>
   <HEAD>
-      <h1> This is the About Me page </h1>
+    
     </HEAD>
+    <BODY>
+   <h1> This is the About Me page </h1>   
+  </BODY>
  </HTML>
