--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 							<div class="info">
 								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
 								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
-									<li><a href="#" class="icon fa-twitter">64</a></li>
-									<li><a href="#" class="icon fa-facebook">128</a></li>
+									<li><a href="https://mail.google.com/mail" class="icon fa-comment">16</a></li>
+									<li><a href="https://www.instagram.com/?hl=en" class="icon fa-heart">32</a></li>
+									<li><a href="https://twitter.com/" class="icon fa-twitter">64</a></li>
+									<li><a href="https://www.facebook.com/" class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
@@ -118,7 +118,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
-							<li><a href="AboutMe.html">About Me</a></li>
+							<li><a href="AboutMe.html"About Me</a></li>
 							<li><a href="#">Contact Me</a></li>
 						</ul>
 					</nav>
