--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
 							<li><a href="AboutMe.html"> About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li><a href="ContactMe.html">Contact Me</a></li>
 						</ul>
 					</nav>
 
