--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 								up in Africa, East Africa is also already in proposal try to ban second-hand clothing from entering their countries. These donated clothes causes a disruption in the natural
 								economic cycle, instead of buying clothes from the locals, the people choose to buy clothes from the second-hand sellers. Most of the money not going back to community but 
 								the pockets of the people who pay for the bundle of clothes. This keeps many of the countries in a third world position, this isn't only with clothes but donation of food as well.
+								<a href="readMore.html"> Read More </a>
 							</p>
 							<p>
 							
@@ -119,7 +120,7 @@
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
 							<li><a href="AboutMe.html"> About Me</a></li>
-							<li><a href="ContactMe.html">Contact Me</a></li>
+							<li><a href="#">Contact Me</a></li>
 						</ul>
 					</nav>
 
