--- a/ContactMe.html
+++ b/ContactMe.html
@@ -6,3 +6,10 @@
      <h1> This is the Contact us page.</h1>
     </BODY>
    </HTML>
+
+          <h1> Here's our contact information.
+  
+  - Kaiya- 20204060@cohs.com
+  - Gerald- Gerzy17@gmail.com
+  - Danny- 7danny23@gmail.com
+  - Vaughn- DudePerfect340@gmail.com <h1>
