--- a/readMore.html
+++ b/readMore.html
@@ -3,7 +3,9 @@
   
   </HEAD>
   <BODY>
-  <h1> Read More Aobut
+  <h1> No Need For The Clothes
       </h1>
+    <p.In 2014, a handful of East African countries imported more than $300 million worth of secondhand clothing from the United States and other wealthy countries. The used items have created a robust market in East Africa and thereby a decent amount of jobs. However, experts say the vast amount of these foreign imports have devastated local clothing industries and led the region to rely far too heavily on the West. Although, some might argue that this aids the economy, it actually has the opposite effect because it hinders third-world countries from making profit by using their own resources to make profit.
+          </p>
     </BODY>
   <HTML>
