--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,9 +7,9 @@
     </BODY>
    </HTML>
 
-          <h1> Here's our contact information.
-  
-  - Kaiya- 20204060@cohs.com
-  - Gerald- Gerzy17@gmail.com
-  - Danny- 7danny23@gmail.com
-  - Vaughn- DudePerfect340@gmail.com <h1>
+<h1> Here's our contact information.</h1>
+  <ul>
+    <li>- Kaiya- 20204060@cohs.com</li>
+    <li>- Gerald- Gerzy17@gmail.com</li>
+    <li>- Danny- 7danny23@gmail.com</li>
+    <li>- Vaughn- DudePerfect340@gmail.com</li>
