--- a/ContactMe.html
+++ b/ContactMe.html
@@ -3,8 +3,8 @@
   
       </HEAD>
       <BODY>
-     <h1> This is the Contact us page.</h1>
-    </BODY>
+     <h1> How To Contact Us</h1>
+    
    </HTML>
 
 <h1> Here's our contact information.</h1>
@@ -13,3 +13,5 @@
     <li>- Gerald- Gerzy17@gmail.com</li>
     <li>- Danny- 7danny23@gmail.com</li>
     <li>- Vaughn- DudePerfect340@gmail.com</li>
+    </BODY>
+    </HTML>
