--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<p>The effects of a bad economy are recessions result in higher unemployment, lower wages and incomes, and lost opportunities more generally. Education, private capital investments, and economic opportunity are all likely to suffer in the current downturn, and the effects will be long-lived. </p>
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">January<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
 								<ul class="stats">
 									<li><a href="https://mail.google.com/mail" class="icon fa-comment">16</a></li>
 									<li><a href="https://www.instagram.com/?hl=en" class="icon fa-heart">32</a></li>
@@ -117,7 +117,7 @@
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
 							<li><a href="AboutMe.html"> About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li><a href="ContactMe.html"> Contact Me</a></li>
 						</ul>
 					</nav>
 
