--- a/ContactMe.html
+++ b/ContactMe.html
@@ -3,7 +3,7 @@
   
       </HEAD>
       <BODY>
-     <h1> How To Contact Us</h1>
+     <h1 style="text-align:center"> How To Contact Us</h1>
     
   
 
