--- a/ContactMe.html
+++ b/ContactMe.html
@@ -2,7 +2,7 @@
   <HEAD>
   
       </HEAD>
-      <BODY>
+      <BODY style="background-color: LavenderBlush">
      <h1 style="text-align:center"> How To Contact Us</h1>
     
   
