--- a/readMore.html
+++ b/readMore.html
@@ -2,8 +2,8 @@
   <HEAD>
   
   </HEAD>
-  <BODY
-        style= "background-color": LavenderBlush>
+  <BODY>
+        <style= "background-color": LavenderBlush>
   <h1 style="text-align:center"> No Need For The Clothes </h1>
     <p><h4>In 2014, a handful of East African countries imported more than $300 million worth of secondhand clothing from the United States
     and other wealthy countries. The used items have created a robust market in East Africa and thereby a decent amount of jobs. However, 
