--- a/readMore.html
+++ b/readMore.html
@@ -11,7 +11,7 @@
     heavily on the West. Although, some might argue that this aids the economy, it actually has the opposite effect because it hinders 
     third-world countries from making profit by using their own resources to make profit.</h4>
           </p>
-  <img src="http://www.ceoafrica.co.ke/2016/07/13/rwanda-multiplies-import-duties-on-secondhand-clothes/">
+  <img src="http://www.theeastafrican.co.ke/image/view/-/3089036/medRes/953775/-/ifs9bs/-/DNMitumba2601d.jpg">
     
     </BODY>
   </HTML>
