--- a/readMore.html
+++ b/readMore.html
@@ -12,6 +12,6 @@
     third-world countries from making profit by using their own resources to make profit.</h4>
           </p>
   <img src="http://www.theeastafrican.co.ke/image/view/-/3089036/medRes/953775/-/ifs9bs/-/DNMitumba2601d.jpg"; style="text-align:center">
-  <li><a href="Index.html">Home</a></li>  
+  <li><a href="index.html">Home</a></li>  
     </BODY>
   </HTML>
