--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="#">Home</a></li>
-							<li><a href="AboutMe.html"> About Me</a></li>
-							<li><a href="ContactMe.html"> Contact Me</a></li>
+							<li><a href="AboutMe.html"> About Us</a></li>
+							<li><a href="ContactMe.html"> Contact Us</a></li>
 						</ul>
 					</nav>
 
