--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,8 +5,8 @@
     <BODY
       style="background-color: LavenderBlush">
    <h1 style="text-align:center"> About Us </h1>  
-      
-   <p><h4><font size="+2"> Vaughn Thompson is 13 years old, he goes to Penn Wood Middle School, Gerald Orji is 17 years old, 
+      <font size="+2">
+   <p><h4> Vaughn Thompson is 13 years old, he goes to Penn Wood Middle School, Gerald Orji is 17 years old, 
      he goes to Penn Wood Highschool, Danny Nguyen is 16 years old, goes to Penn Wood Highschool, Kaiya Rivers is 15 years,
      and goes to Cardinal Ohara Highschool. They are all first year coders participating in the 2018 Code-A-Thon.<h4>
      <li><a href="index.html"> Home</a></li>
