--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
     </HEAD>
     <BODY
       style="background-color: LavenderBlush">
-   <h1 style="text-align:center"> About Us </h1>  
+  // <h1 style="text-align:center"> About Us </h1>  
 
    <p><h4> Vaughn Thompson is 13 years old, he goes to Penn Wood Middle School, Gerald Orji is 17 years old, 
      he goes to Penn Wood Highschool, Danny Nguyen is 16 years old, goes to Penn Wood Highschool, Kaiya Rivers is 15 years,
