--- a/ContactMe.html
+++ b/ContactMe.html
@@ -2,15 +2,15 @@
   <HEAD>
   
       </HEAD>
-      <BODY style="background-color: LavenderBlush">
+      <BODY> style="background-color: LavenderBlush">
      <h1 style="text-align:center"> How To Contact Us</h1>  
 
 <font size="+2">
   <ul>
-    <li>- Kaiya- 20204060@cohs.com</li>
-    <li>- Gerald- Gerzy17@gmail.com</li>
-    <li>- Danny- 7danny23@gmail.com</li>
-    <li>- Vaughn- DudePerfect340@gmail.com</li>
+    <li>- Kaiya- 20204060@cohs.com and 610-654-9876</li>
+    <li>- Gerald- Gerzy17@gmail.com and 610-324-3645</li>
+    <li>- Danny- 7danny23@gmail.com and 610-932-5377</li>
+    <li>- Vaughn- DudePerfect340@gmail.com and 610-756-0238</li>
     <li><a href="index.html"> Home</a></li>    
 
     </BODY>
