--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 							<!--<a href="#" class="button previous">Previous Page</a>-->
 							<div class="pages">
 								<a href="#" class="active">1</a>
-								<a href="#">2</a>
+								<a href="Solutions.html"> 2</a>
 							</div>
-							<a href="#" class="button next">Next Page</a>
+							<a href="Solutions.html" class="button next">Next Page</a>
 						</div>
 
 				</div>
