--- a/Solutions.html
+++ b/Solutions.html
@@ -55,12 +55,9 @@
 " class="icon fa-facebook">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="https://cdn.static-economist.com/sites/default/files/images/2016/03/articles/main/20160402_map001.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://cdn.cnn.com/cnnnext/dam/assets/130411123848-second-hand-clothing-mpa-2-horizontal-large-gallery.jpg"/></a>
 							<p font size="2">
-								Though it may seem as though donation of clothes to third-world countries are beneficial to the people, it actually ruins the economy. 70% of the clothing donated ends
-								up in Africa, East Africa is also already in proposal try to ban second-hand clothing from entering their countries. These donated clothes causes a disruption in the natural
-								economic cycle, instead of buying clothes from the locals, the people choose to buy clothes from the second-hand sellers. Most of the money not going back to community but 
-								the pockets of the people who pay for the bundle of clothes. This keeps many of the countries in a third world position, this isn't only with clothes but donation of food as well.
+								ppp
 								<a href="readMore.html"; role= <button id="clicker">Read More </button></a>
 							</p>
 							<p>
