--- a/Solutions.html
+++ b/Solutions.html
@@ -27,8 +27,8 @@
 									if they get too long. You can also remove the <p> entirely if you don't
 									need a subtitle.
 								-->
-								<h2><a href="#">Changing Economy</a></h2>
-								<p>Effects of donation of clothes to countries, and why it's better to give education.
+								<h2><a href="#">Solution is Repurpose Clothing</a></h2>
+								<p>A new revolution in how to stop the economic damage that occurs with selling second-hand clothes to other countries.
 								</p>
 							</header>
 							<div class="info">
