--- a/Solutions.html
+++ b/Solutions.html
@@ -70,7 +70,7 @@
 						<div class="pagination">
 							<!--<a href="#" class="button previous">Previous Page</a>-->
 							<div class="pages">
-								<a href="#" class="active">1</a>
+								<a href="index.html" class="active">1</a>
 								<a href="#">2</a>
 							</div>
 							<a href="#" class="button next">Next Page</a>
