--- a/readMore.html
+++ b/readMore.html
@@ -11,6 +11,10 @@
     heavily on the West. Although, some might argue that this aids the economy, it actually has the opposite effect because it hinders 
     third-world countries from making profit by using their own resources to make profit.</h4>
           </p>
+    <p><h4>In March, the East African Community (EAC), which is made up of Kenya, Uganda, Tanzania, Burundi and Rwanda, proposed banning all imported used clothing and shoes by 2019. The goal is to stop relying on imports from rich nations, boost local manufacturing and create new jobs. 
+However, the law is unlikely to pass. There is resistance from the U.S., which unloads hordes of secondhand clothes all over the world, and from sellers in East Africa whose livelihood depends on these shipments, as well as from experts who think an outright ban won’t be enough for these countries to restore production at home.
+Once these discarded clothes hit East African shores, they sell for extremely low prices: For example, a pair of used jeans can be as little as $1.50 in the Gikomba Market, East Africa’s biggest second hand clothing market, located in Nairobi, Kenya.
+  </p>
   <img src="http://www.theeastafrican.co.ke/image/view/-/3089036/medRes/953775/-/ifs9bs/-/DNMitumba2601d.jpg"; style="text-align:center">
   <li><a href="index.html">Home</a></li>  
     </BODY>
