--- a/Solutions.html
+++ b/Solutions.html
@@ -28,7 +28,7 @@
 									need a subtitle.
 								-->
 								<h2><a href="#">Solution is Repurpose Clothing</a></h2>
-								<p>A new revolution in how to stop the economic damage that occurs with selling second-hand clothes to other countries.
+								<p>A new revolution is how to stop the economic damage that occurs with selling second-hand clothes to other countries. With Repurpose Clothing brand.
 								</p>
 							</header>
 							<div class="info">
@@ -57,7 +57,7 @@
 							</div>
 							<a href="#" class="image featured"><img src="https://cdn.cnn.com/cnnnext/dam/assets/130411123848-second-hand-clothing-mpa-2-horizontal-large-gallery.jpg"/></a>
 							<p font size="2">
-								ppp
+								Repurpose Clothing brand is a start off campany that works by buying the clothes that are unable to be sold from thrift-stores, which usually are 
 								<a href="readMore.html"; role= <button id="clicker">Read More </button></a>
 							</p>
 							<p>
@@ -73,7 +73,7 @@
 								<a href="index.html" class="active">1</a>
 								<a href="#">2</a>
 							</div>
-							<a href="#" class="button next">Next Page</a>
+						
 						</div>
 
 				</div>
@@ -88,7 +88,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Home</a></li>
+							<li class="current"><a href="index.html">Home</a></li>
 							<li><a href="AboutUs.html"> About Me</a></li>
 							<li><a href="ContactMe.html"> Contact Me</a></li>
 						</ul>
