--- a/Solutions.html
+++ b/Solutions.html
@@ -57,8 +57,11 @@
 							</div>
 							<a href="#" class="image featured"><img src="https://cdn.cnn.com/cnnnext/dam/assets/130411123848-second-hand-clothing-mpa-2-horizontal-large-gallery.jpg"/></a>
 							<p font size="2">
-								Repurpose Clothing brand is a start off campany that works by buying the clothes that are unable to be sold from thrift-stores, which usually are 
-								<a href="readMore.html"; role= <button id="clicker">Read More </button></a>
+								Repurpose Clothing brand is a start off campany that works by buying the clothes that are unable to be sold from thrift-stores, which usually 
+								are usually sold to other countries. We have a Go-Fund-Me <a href="gofundme.com/sfqfjt-repurpose-clothing">Repurpose Clothing </a>
+								where we take donations and investments, a donation of $30 can get you a recycled shirt that helps protect the struggling people in third-world
+								countries.
+								
 							</p>
 							<p>
 							
