--- a/Solutions.html
+++ b/Solutions.html
@@ -60,7 +60,9 @@
 								Repurpose Clothing brand is a start off campany that works by buying the clothes that are unable to be sold from thrift-stores, which usually 
 								are usually sold to other countries. We have a Go-Fund-Me <a href="https://funds.gofundme.com/dashboard/sfqfjt-repurpose-clothing">Repurpose Clothing </a>
 								where we take donations and investments, a donation of $30 can get you a recycled shirt that helps protect the struggling people in third-world
-								countries.
+								countries. Our mission is to recycle clothes and help "prevent" the further damage of other economies and communities. We plan to buy all unsellable clothes and 
+								turn them into new clothes. We turn jeans to jackets and shirts to socks, the extra money is used for the proccessing of the clothes, and money is also donated to a 
+								charity that helps educate people, and brings a balanced economic system in the world.
 								
 							</p>
 							<p>
