--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									the entire "date" element.
 
 								-->
-								<span class="date"><span class="month">January<span>y</span></span> <span class="day">27</span><span class="year">, 2018</span></span>
+								</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
