--- a/readMore.html
+++ b/readMore.html
@@ -16,6 +16,7 @@
     <p><h4>However, the law is unlikely to pass. There is resistance from the U.S., which unloads hordes of secondhand clothes all over the world, and from sellers in East Africa whose livelihood depends on these shipments, as well as from experts who think an outright ban won’t be enough for these countries to restore production at home.</p>
     <p><h4>Once these discarded clothes hit East African shores, they sell for extremely low prices: For example, a pair of used jeans can be as little as $1.50 in the Gikomba Market, East Africa’s biggest second hand clothing market, located in Nairobi, Kenya.
   </p>
+    <p> The cost of production becomes virtually nothing once it becomes a donated good,and thus, it can be priced much lower than new clothing. This provides usedclothing with a price advantage that new clothing cannot compete with.</p>
   <img src="http://www.theeastafrican.co.ke/image/view/-/3089036/medRes/953775/-/ifs9bs/-/DNMitumba2601d.jpg"; center center; style="text-align:center"> 
   <li><a href="index.html">Home</a></li>  
     </BODY>
