--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<span class="date"><span class="month">January<span>y</span></span> <span class="day">27</span><span class="year">, 2014</span></span>
 								<ul class="stats">
 									<li><a href="https://mail.google.com/mail" class="icon fa-comment">16</a></li>
-									<li><a href="https://www.instagram.com/?hl=en" class"icon fa-instagram">32</a></li>
+									<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram">32</a></li>
 									<li><a href="https://twitter.com/" class="icon fa-twitter">64</a></li>
 									<li><a href="https://www.facebook.com/" class="icon fa-facebook">128</a></li>
 								</ul>
