--- a/AboutUs.html
+++ b/AboutUs.html
@@ -30,13 +30,15 @@
 							      <BODY style="background-color: LavenderBlush">
      <h1 style="text-align:center"> How To Contact Us</h1>  
 
-<font size="+2">
-  <ul>
-    <li>- Kaiya- 20204060@cohs.com and 610-654-9876</li>
-    <li>- Gerald- Gerzy17@gmail.com and 610-324-3645</li>
-    <li>- Danny- 7danny23@gmail.com and 610-932-5377</li>
-    <li>- Vaughn- DudePerfect340@gmail.com and 610-756-0238</li>
-    <li><a href="index.html"> Home</a></li>    
+
+								     <font size="+2">
+  
+									      <ul>
+										 <li>- Kaiya- 20204060@cohs.com and 610-654-9876</li>
+										 <li>- Gerald- Gerzy17@gmail.com and 610-324-3645</li>
+   										 <li>- Danny- 7danny23@gmail.com and 610-932-5377</li>
+    										<li>- Vaughn- DudePerfect340@gmail.com and 610-756-0238</li>
+    										<li><a href="index.html"> Home</a></li>    
 
     </BODY>
 
@@ -45,17 +47,17 @@
 		<!-- Sidebar -->
 			<div id="sidebar">
 
-				<!-- Logo -->
-					<h1 id="logo"><a href="#">REPURPOSE CLOTHING</a></h1>
+		<!-- Logo -->
+			<h1 id="logo"><a href="#">REPURPOSE CLOTHING</a></h1>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<li><a href="AboutUs.html"> About Me</a></li>
-							<li><a href="ContactMe.html"> Contact Me</a></li>
+		<!-- Nav -->
+			<nav id="nav"						
+			     <ul>
+					<li class="current"><a href="index.html">Home</a></li>
+					<li><a href="AboutUs.html"> About Me</a></li>						
+					<li><a href="ContactMe.html"> Contact Me</a></li>
 						</ul>
-					</nav>
+				</nav>
 
 				
 
